# myc-scores-2

./: .gitattributes  .prototools  README.md  deno.json  shell.nix
.github/workflows/: deno-ci.yml  rust-ci.yml  ts-ci.yml
adl/common/: db.adl  db.adl-rs  db_api.adl  db_api.adl-rs  http.adl  time.adl-pg  time.adl-rs
adl/common/adminui/: db.adl
adl/mycscores/: db.adl
adl/mycscores/apis/: ui.adl
adl/mycscores/config/: server.adl
adl/protoapp/: db.adl  ui.adl
adl/protoapp/apis/: ui.adl
adl/protoapp/config/: server.adl
deno/: file-writer.ts  gen-adl-ts-package.ts  gen-rs-seaquery-schema.ts  gen-sqlschema.ts  genadl.ts  local-setup.sh  local-setup.ts
platform/dev/: docker-compose.yml
protoapp-server/migrations/: adl-tables.latest.sql
protoapp-server/src/adl/db/: schema.rs
rust/: Cargo.toml  Makefile  rust-toolchain.toml
rust/adl/: Cargo.toml
rust/adl/src/: .adl-manifest  lib.rs
rust/adl/src/custom/common/: db.rs  mod.rs  time.rs
rust/adl/src/db/: conversions.rs  schema.rs  types.rs
rust/server/: Cargo.toml  Dockerfile
rust/server/migrations/: 00000000000000_adl-tables.latest.sql  00000000000002_adl-metadata.latest.sql  00000000000003_postgrest.sql  00000000000010_postgrest-roles.sql  00000000000020_adl-tables.latest.sql  00000000000040_adl-metadata.latest.sql
rust/server/src/: .adl-manifest  lib.rs
rust/server/src/adl/: mod.rs
rust/server/src/adl/custom/: mod.rs
rust/server/src/adl/custom/common/: db.rs  time.rs
rust/server/src/adl/db/: conversions.rs  mod.rs  schema.rs  types.rs
rust/server/src/server/: handler.rs  handlers.rs  jwt.rs  mod.rs  passwords.rs  poem_adl_interop.rs  routing.rs
rust/server/src/server/db/: conversions.rs  mod.rs  seasons.rs  users.rs  utils.rs
rust/server/src/server/handlers/: mod.rs  seasons.rs  users.rs
rust/server/src/server/middleware/: adl_interop.rs  error_handling.rs  mod.rs
rust/server/src/server/tests/: helpers.rs  mod.rs
sql/adl-gen/: adl-metadata.latest.sql  adl-tables.latest.sql
ts/: pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
ts/adl/: package.json  tsconfig.json
ts/adl/src/: .adl-manifest  resolver.ts
ts/adl/src/common/: db.ts  db_api.ts  http.ts  strings.ts  time.ts
ts/adl/src/mycscores/: db.ts
ts/adl/src/protoapp/: db.ts
ts/adl/src/sys/: annotations.ts
ts/api-workbench/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
ts/api-workbench/src/: auth.ts  main.tsx  navigation.tsx  theme.tsx
ts/api-workbench/src/components/: Button.tsx  Links.tsx  RequireLogin.tsx
ts/api-workbench/src/hooks/: use-app-state.tsx  use-logout.ts
ts/api-workbench/src/pages/: api-workbench.tsx  landing.tsx  login.tsx
ts/api-workbench/src/service/: fetch-http.ts  http.ts  index.ts  service-base.ts
ts/prettier-config/: index.json  package.json
ts/ui/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ts/ui/src/: App.tsx  auth.ts  main.tsx  navigation.tsx  theme.tsx
ts/ui/src/adl-gen/: .adl-manifest  resolver.ts
ts/ui/src/admin/: navigation.tsx
(+56 files in other folders)
