[package]
name = "protoapp"
version = "0.1.0"
edition = "2021"

[dependencies]
adl = { workspace = true }
anyhow = "1.0.70"
async-trait = "0.1.68"
base64 = "0.21.2"
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
http = "0.2.1"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
log = "0.4.17"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "time", "json"] }
sea-query = {version="0.28.5", features=["with-json","with-time"]}
sea-query-binder = { version="0.3.1", features = ["sqlx-postgres", "with-json", "with-time"]}
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
time = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
argon2 = "0.5.2"
poem = { version = "3.1.5", features = ["session","cookie"] }

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
test-log = { version = "0.2.16", features = []}
urlencoding = { version = "2.1.3" }
