[package]
name = "mycscores"
version = "0.1.0"
edition = "2021"

[dependencies]
adl = { workspace = true }
anyhow = "1.0.70"
async-trait = "0.1.68"
base64 = { workspace = true }
clap = { version = "4.2.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4.3"
http = "0.2.1"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
log = "0.4.17"
rand = "0.8.5"
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
argon2 = "0.5.2"
poem = { version = "3.1.5", features = ["session","cookie", "anyhow"] }

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
test-log = { version = "0.2.16", features = []}
urlencoding = { version = "2.1.3" }
